--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myApp",
+  "name": "tp_modelos_y_consultas",
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-validator": "^6.12.2",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mysql2": "^2.3.0",
